Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -10,9 +10,9 @@
   },
   "socialnetwork": {
     "email": "lxjk001@gmail.com",
-    "linkedin": "lxjk001@gmail.com"
+    "linkedin": "https://www.linkedin.com/in/lxjk001"
   },
   "theme": {
-    "name": "ghostium"
+    "name": "ichi"
   }
 }
