Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,8 +5,8 @@
     "branch": "master"
   },
   "site": {
-    "title": "Blog Title",
-    "description": "Blog desc"
+    "title": "Eric Zhang",
+    "description": "Background: \\nTool & Framework, Game System Programming, Applied Mathematics, Machine Learning.\\n  Interest: \\nGame Tools and Framework, Experimental Game System.\\n  Titles: \\nEntwined - PS4/PS3/PSVita \\nEntwined Challenge - Android/iOS  \\n"
   },
   "socialnetwork": {
     "email": "lxjk001@gmail.com",
