Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
   },
   "site": {
     "title": "Eric Zhang",
-    "description": "Background: \\nTool & Framework, Game System Programming, Applied Mathematics, Machine Learning.\\n  Interest: \\nGame Tools and Framework, Experimental Game System.\\n  Titles: \\nEntwined - PS4/PS3/PSVita \\nEntwined Challenge - Android/iOS  \\n"
+    "description": "Game Dev - Tool Dev - Math - Machine Learning"
   },
   "socialnetwork": {
     "email": "lxjk001@gmail.com",
