Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,8 @@
   },
   "site": {
     "title": "Eric Zhang",
-    "description": "Game Dev - Tool Dev - Math - Machine Learning"
+    "description": "Game Dev - Tool Dev - Math - Machine Learning",
+    "googleAnalytics": "UA-86497933-1"
   },
   "socialnetwork": {
     "email": "lxjk001@gmail.com",
