--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,8 +5,8 @@
     "branch": "master"
   },
   "site": {
-    "title": "Eric Zhang",
-    "description": "Game Dev - Tool Dev - Math - Machine Learning",
+    "title": "eric's blog",
+    "description": "- Game Dev -\n- Tool Dev -\n- Math -",
     "googleAnalytics": "UA-86497933-1"
   },
   "socialnetwork": {
