Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
   },
   "site": {
     "title": "eric's blog",
-    "description": "- Game Dev -\n- Tool Dev -\n- Math -",
+    "description": "- Game Dev - Tool Dev - Math -",
     "googleAnalytics": "UA-86497933-1"
   },
   "socialnetwork": {
