Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,7 +5,7 @@
     "branch": "master"
   },
   "site": {
-    "title": "eric's blog",
+    "title": "ERIC's BLOG",
     "description": "- Game Dev - Tool Dev - Math -",
     "googleAnalytics": "UA-86497933-1"
   },
