--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,8 +5,8 @@
     "branch": "master"
   },
   "site": {
-    "title": "ERIC's BLOG",
-    "description": "- Game Dev - Tool Dev - Math -",
+    "title": "Eric's Blog",
+    "description": "- Game Dev - Tool Dev - Math - Machine Learning -",
     "googleAnalytics": "UA-86497933-1"
   },
   "socialnetwork": {
